--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
 </head>
 </html>
-
+<body>
+  This is another test.
+</body>
